# peterroelants.github.io

./: .gitignore  404.html  AGENTS.md  README.md  _config.yml  about.html  about.md  browserconfig.xml  index.html  index.md  justfile  ml_notes.html  package-lock.json  package.json  postcss.config.js  posts_chrono.html  robots.txt  tag_index.html
_includes/: all_tags.html  analytics.html  anchor_links.html  favicons.html  footer.html  header.html  mathjax.html  meta.html  navbar.html  post_history.html  post_social_media.html  post_tags.html
_layouts/: about.html  default.html  default_container.html  default_container_title.html  post.html  post_markdown.html
_posts/: 2015-05-17-interesting_reads.md  2015-05-18-Simple_neural_network_part01.html  2015-05-18-test_post.md  2015-06-10-cross-entropy-logistic.html  2015-06-10-cross-entropy-softmax.html  2015-06-10-cross_entropy_logistic.html  2015-06-10-cross_entropy_softmax.html  2015-06-10-neural-network-implementation-part01.html  2015-06-10-neural-network-implementation-part02.html  2015-06-10-neural-network-implementation-part03.html  2015-06-10-neural-network-implementation-part04.html  2015-06-10-neural-network-implementation-part05.html  2015-06-10-neural_network_implementation_intermezzo01.html  2015-06-10-neural_network_implementation_intermezzo02.html  2015-06-10-neural_network_implementation_part01.html  2015-06-10-neural_network_implementation_part02.html  2015-06-10-neural_network_implementation_part03.html  2015-06-10-neural_network_implementation_part04.html  2015-08-02-neural_network_implementation_part05.html  2015-09-27-rnn-implementation-part01.html  2015-09-27-rnn-implementation-part02.html  2015-09-27-rnn_implementation_part01.html  2015-09-27-rnn_implementation_part02.html  2018-09-26-MultiArmBandit.html  2018-09-26-multi-armed-bandit-implementation.html  2018-09-26-multi-armed_bandit_implementation.html  2018-09-28-multivariate-normal-primer.html  2018-09-28-multivariate_normal_primer.html  2018-10-22-linear-regression-four-ways.html  2019-01-05-gaussian-process-kernel-fitting.html  2019-01-05-gaussian-process-kernels.html  2019-01-05-gaussian-process-tutorial.html
build_info/: agent_friendliness.md  jekyll.md  potential_improvements.md  site_overview.md
css/: main.css  main.min.css  notebook.css  notebook.min.css  syntax.min.css  theme-overrides.css  tmp.css
jekyll_info/: jekyll.md
js/: input_exapand_collapse.js  input_expand_collapse.js  tag_pages.js  theme_toggle.js
notebooks/: README.md  conda_env.yml  insertCollapseTags.py  nb_converter.sh  neural_net_implementation_convert.sh  (+1 more)
notebooks/ab_to_rl/: README.md  ab_to_rl_convert.sh  beta-distribution-probabilities.ipynb  beta-prior-sequential-binary-decisions.ipynb  pyproject.toml
notebooks/diffusion_flow_matching/: README.md  flow_matching_convert.sh  flow_matching_intro.ipynb  pyproject.toml
notebooks/from_ab_to_rl/: README.md  from_ab_to_rl_convert.sh  menace_engine.py  menace_playable_app.py  post_01_bayesian_ab_testing.ipynb  post_02_multi_armed_bandits.ipynb  post_03_delayed_feedback_menace.ipynb  pyproject.toml
notebooks/gaussian_process/: README.md  gaussian-process-kernel-fitting.ipynb  gaussian-process-kernels.ipynb  gaussian-process-tutorial.ipynb  gaussian_process_convert.sh  gp_numpy_conda_env.yml  gp_tf_conda_env.yml  monthly_in_situ_co2_mlo.csv  pyproject.toml  rational_quadratic.py
notebooks/misc/: linear-regression-four-ways.ipynb  misc_conda_env.yml  misc_convert.sh  multi-armed-bandit-implementation.ipynb  multivariate-normal-primer.ipynb  pyproject.toml
(+82 files in other folders)
