[project]
name = "ab-to-rl-notebooks"
version = "0.1.0"
description = "Notebook environment for A/B testing to reinforcement learning posts"
requires-python = ">=3.13,<3.14"
dependencies = [
  "bokeh>=3.9,<4",
  "ipykernel>=6.29,<7",
  "jupyter-bokeh>=4,<5",
  "jupyterlab>=4,<5",
  "matplotlib>=3.10,<4",
  "nbconvert>=7,<8",
  "numpy>=1.26",
  "scipy>=1.16,<2",
  "seaborn>=0.13,<0.14",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "ty>=0.0.34",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402"]
