[project]
name = "from-ab-to-rl-notebooks"
version = "0.1.0"
description = "Notebook environment for the From AB to RL candidate blog series"
requires-python = ">=3.12,<3.14"
dependencies = [
  "bokeh>=3.8,<4",
  "ipykernel>=6.28,<7",
  "jupyter-bokeh>=4,<5",
  "jupyterlab>=4,<5",
  "matplotlib>=3.7,<4",
  "nbconvert>=7,<8",
  "numpy>=1.24",
  "scipy>=1.10,<2",
  "seaborn>=0.12,<0.14",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402"]
